# CSE323_Project_Terminal_File_Manager

./: .gitignore  CMakeLists.txt  Readme.md
include/: FileManager.cpp  FileManager.h  UserInterface.cpp  UserInterface.h
src/: main.cpp
